[gd_scene load_steps=12 format=3 uid="uid://b38bvlub8v1wd"]

[ext_resource type="Script" path="res://Personajes/EnemigoRhino/rhino.gd" id="1_7xmrk"]
[ext_resource type="Texture2D" uid="uid://c4j2bbdrt3aj1" path="res://Assets_PixelAdventure/Enemies/Rino/rhino.png" id="1_h5p7e"]
[ext_resource type="PackedScene" uid="uid://sqxbpo7m6rht" path="res://Trampas/dmg_player.tscn" id="3_fndeg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b6bp4"]
size = Vector2(41, 26)

[sub_resource type="Animation" id="Animation_dn6jk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_g03ng"]
resource_name = "hitWall"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [22, 23, 24, 25, 26]
}

[sub_resource type="Animation" id="Animation_x06dv"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [33, 34, 35, 36]
}

[sub_resource type="Animation" id="Animation_cgpwr"]
resource_name = "idle"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 2, 3, 4, 5, 6, 7, 8, 10]
}

[sub_resource type="Animation" id="Animation_ljs1p"]
resource_name = "runAngry"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4orhx"]
_data = {
"RESET": SubResource("Animation_dn6jk"),
"hitWall": SubResource("Animation_g03ng"),
"hurt": SubResource("Animation_x06dv"),
"idle": SubResource("Animation_cgpwr"),
"runAngry": SubResource("Animation_ljs1p")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sbfhw"]
size = Vector2(13, 23.5)

[node name="Rhino" type="CharacterBody2D" groups=["Enemigos"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_7xmrk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_h5p7e")
hframes = 11
vframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_b6bp4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4orhx")
}

[node name="dmgPlayer" parent="." instance=ExtResource("3_fndeg")]

[node name="CollisionShape2D" parent="dmgPlayer" index="0"]
position = Vector2(-18, 0.75)
shape = SubResource("RectangleShape2D_sbfhw")

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCast2DPlayer2Right" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(170, 0)

[node name="RayCast2DPlayerLeft" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(-170, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="RayCast2DWall" type="RayCast2D" parent="."]
target_position = Vector2(-27, 0)
collision_mask = 4

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="heHechoDanio" from="dmgPlayer" to="." method="_on_dmg_player_he_hecho_danio"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]

[editable path="dmgPlayer"]
